# no-bitches-rs

./: Cargo.toml  README.md
src/: assets.rs  builder.rs  lib.rs
