[package]
name = "no-bitches"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "megamind meme megamind meme megamind meme megamind meme"
documentation = "https://docs.rs/no-bitches"
readme = "README.md"
homepage = "https://github.com/ewpratten/no-bitches-rs"
repository = "https://github.com/ewpratten/no-bitches-rs"
license = "GPL-3.0"
keywords = ["megamind", "meme", "image", "image-generation", "generative"]
categories = ["multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "^6.2.0"
imageproc = "^0.23.0"
image = "^0.24.2"
rusttype = "^0.9.2"

[features]
default = []
no-reexport = []